HDFS-11161. Address PR review feedback for hadoop-bos module.
- Exclude EPL-licensed paho and CVE-affected bcprov-jdk15on deps
- Relocate shaded packages to org.apache.hadoop.fs.bos.shaded.*
- Remove jackson/commons-logging from shade (unused/bridged)
- Use skipITs instead of maven.test.skip following AWS model
- Fix BosOutputStream close() to abort multipart upload on failure
- Fix BceCredentialsProvider mutual recursion causing StackOverflow
- Fix BosInputStream close() synchronization and skip statistics
- Restore interrupt flag on InterruptedException in retry loops
- Cancel all futures on rename failure in NonHierarchyStore
- Shut down thread pool in BosNativeFileSystemStore.close()
- Add abortMultipartUpload to BosClientProxy interface
- Throw IOException on invalid upload ID in completeMultipartUpload
- Remove credential values from debug logs
- Fix delete() to check existence in hierarchy+recursive path
- Change BosOutputStream fields from public to private/private final
- Use UnsupportedOperationException for append() and truncate()
- Use ContentSummary.Builder instead of deprecated constructor
- Implement Closeable on BosBlockBuffer
- Use ThreadLocalRandom instead of Random in BosRandomRetryPolicy
- Remove misleading constructor from BaiduBosFileSystemAdapter
- Make findbugs-exclude.xml suppressions more precise
- Use getDeclaredConstructor().newInstance() instead of deprecated API
- Fix EnvironmentVariableCredentialsProvider logger class

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>